@@ -33,6 +33,7 @@ http://svn.edgewall.org/repos/genshi/tags/0.5.0/
    set to "xml" (the default), the include is processed as before, but when set
    to "text", the included template is parsed as a text template using the new
    syntax (ticket #101).
+ * Python code blocks inside match templates are now executed (ticket #155).
 
 
 Version 0.4.4
